--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
 
 .page-menu{
     position: sticky;
+    z-index: 999;
     top: 0;
     border-top: 2px solid #8A8070;
     border-bottom: 2px solid #8A8070;
@@ -27,10 +28,11 @@ body{
     justify-content: center;
     padding: 0;
     list-style-type: none;
+    margin: 0;
 }
 
 .page-menu ul li{
-    margin: 5px 15px;
+    padding: 15px;
 }
 
 .page-menu ul li a{
@@ -39,8 +41,9 @@ body{
     text-decoration: none;
 }
 
-.page-menu ul li a:hover{
-    color: #7ABA96;    
+.page-menu ul li:hover{
+    color: white;   
+    background-color: #8A8070; 
 }
 
 /* FOOTER */
@@ -144,5 +147,11 @@ main{
     border: 0;
     font-weight: bold;
     padding: 5px;    
+    transition: all 0.25s ease;
 }
 
+.home-aside .home-book button:hover{
+    background-color: #8A8070;    
+    color: white;    
+    cursor: pointer;
+}
