--- a/css/receta.css
+++ b/css/receta.css
@@ -1,4 +1,4 @@
-/* INTRODUCCIÓN */
+/* RECIPE INFO */
 
 .recipe-intro{
     background-color: #7ABA9650;
@@ -21,6 +21,10 @@
     margin-top: 0;
 }
 
+.recipe-ing{
+    justify-content: center;
+}
+
 .recipe-ing div{
     background-color: #8A8070;
     color: white;
@@ -31,21 +35,22 @@
 
 .recipe-ing h2{    
     font-size: 1.17em;
-    margin-right: 15px;
+    margin: 5px 0;
 }
 
 .recipe-ing ul{    
     padding: 0;    
+    margin: 0;
     list-style-type: none;
-    justify-content: space-between;
-    align-items: center;
+    align-items: justify;
+    margin-bottom: 5px;
 }
 
 .recipe-ing ul li{
     margin: 0 15px;
 }
 
-/* PASOS */
+/* STEPS */
 
 .recipe-steps article{
     margin-bottom: 15px;
@@ -58,10 +63,12 @@
     align-items: center;    
     border-bottom: 2px solid #8A8070;
     justify-content: space-between;    
+    padding: 2.5px 0;    
 }
 
 .recipe-steps .recipe-step-info h3{    
-    margin: 5px 0;
+    text-transform: uppercase;
+    margin: 0;
 }
 
 .recipe-steps .recipe-step-info span{    
@@ -71,7 +78,7 @@
 }
 
 .recipe-step-desc {
-    margin-top: 10px;
+    padding: 10px 0;
 }
 
 .recipe-steps .recipe-step-desc img{
