--- a/css/contact.css
+++ b/css/contact.css
@@ -16,34 +16,54 @@
 .contact-form{
     padding: 15px;
     background-color: #7ABA9650;
-    border-radius: 15px;
+    border-radius: 15px;    
 }
 
-.contact-form label{
-    font-size: 1.5em;
-    margin-bottom: 5px;    
-    text-decoration: underline;
-    font-weight: bold;    
-    padding: 5px;
+.contact-form .input-container{
+    position: relative;
+}
+
+.contact-form label, .contact-form .contact-form-radio-container label.contact-form-title{
+    top: -8px;
+    left: 5px;
+    position: absolute;
+    font-size: .87em;        
+    background-color: white;
+    padding: 2px 5px;    
     border-radius: 5px;
+    text-align: center;
 }
 
-
-.contact-form input, .contact-form textarea{    
+.contact-form input, .contact-form textarea, .contact-form-radio-container{    
     margin-bottom: 15px;
     font-family: inherit;
-    border: 2px solid #8A807050;
+    border: none;
+    border-bottom: 2px solid #8A807050;
     padding: 10px 5px;    
     border-radius: 5px;
     background-color: white;
+    box-sizing: border-box;    
+}
+
+.contact-form-radio-container{
+    position: relative;
+    margin-bottom: 15px;
+}
+
+.contact-form-radio-container input{
+    margin-bottom: 0;
 }
 
 .contact-form input:hover, .contact-form textarea:hover, .contact-form input:focus, .contact-form textarea:focus{    
-    border: 2px solid #8A8070;
+    border-bottom: 2px solid #8A8070;
+    background-color: #FAFAFA;
 }
 
-.contact-form .contact-form-radio-container label{
-    text-decoration: none;
-    font-weight: normal;
+.contact-form .contact-form-radio-container label{        
     font-size: 1em;
+    top: 0;    
+    left: 0;
+    padding: 0;
+    background-color: transparent;
+    position: relative;
 }
