--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,21 @@
 /* MAIN */
 
 .home-recipes article{
+    animation: appear 0.75s ease;
     transition: all 0.25s ease;    
 }
 
+@keyframes appear{
+    0%{
+        transform: scale(0);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
 .home-recipes article:hover{
-    transform: scale(1.02)
+    transform: scale(1.02);
 }
 
 .home-recipes .inner-content{
